deps/v8/test/message/fail/weak-refs-makecell2.out
*%(basename)s:9: TypeError: WeakFactory.prototype.makeCell: target and holdings must not be same
wf.makeCell(o, o);
   ^
TypeError: WeakFactory.prototype.makeCell: target and holdings must not be same
    at WeakFactory.makeCell (<anonymous>)
    at *%(basename)s:9:4
